--- a/src/index.css
+++ b/src/index.css
@@ -254,13 +254,11 @@ ul {
 }
 /* ============= PROJECT CSS =============== */
 /* optional */
-
 body {
-  background: var(--primary-100);
+  background-color: #7cdcec;
 }
 main {
   min-height: 100vh;
-  /* using flex because of better browser support */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -268,11 +266,10 @@ main {
 
 .container {
   width: 90vw;
-  margin: 5rem auto;
-  background: var(--white);
-  border-radius: var(--borderRadius);
-  padding: 2.5rem;
+  background-color: white;
   max-width: 800px;
+  padding: 2.5rem;
+  border-radius: 3px;
   box-shadow: var(--shadow-3);
 }
 .container h1 {
@@ -281,19 +278,18 @@ main {
   color: var(--grey-700);
 }
 .question {
-  padding: 1rem 1.5rem;
   border: 2px solid var(--grey-200);
-  margin-bottom: 1rem;
-  border-radius: var(--borderRadius);
-  box-shadow: var(--shadow-3);
+  padding: 1rem 1.5rem;
   margin-bottom: 2rem;
+  border-radius: 2px;
+  box-shadow: var(--shadow-3);
 }
-
 .question p {
   color: var(--grey-500);
   line-height: 2;
   margin-top: 1rem;
 }
+
 .question header {
   display: flex;
   justify-content: space-between;
@@ -311,13 +307,9 @@ main {
   width: 2rem;
   height: 2rem;
   background: var(--primary-900);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
   color: var(--white);
+  border-radius: 50%;
   cursor: pointer;
-  /* optional - last item */
-  align-self: flex-start;
-  min-width: 2rem;
+  display: grid;
+  place-content: center;
 }
